tests/cases/errors/002_delimiter_mismatch.nesl
<<<<<<<<<nesl
{
  obj = {
    key = R"""pv(value)pv"""
  ]
}
=========nesl